Compiler/tests/semantics/fail/heredar_clase_System.java
// Falla porque no puede una clase no puede heredar de la clase System.

class Test extends System {
	static void main() {
	
	}

}